{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Player",
            "id": "adc59976-a9cb-41d0-a5ad-c19d83968d0a",
            "actions": [
                {
                    "name": "Movement",
                    "type": "PassThrough",
                    "id": "0a4a5da6-1773-414a-8407-2ecedcff7f6e",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ChangeMovementType",
                    "type": "Button",
                    "id": "6266edb8-960f-4b26-82e9-8163e45a9829",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Look",
                    "type": "PassThrough",
                    "id": "46878654-a916-4f1f-ba46-bc9306d2eaee",
                    "expectedControlType": "Vector2",
                    "processors": "ScaleVector2(x=0.1,y=0.1)",
                    "interactions": ""
                },
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "ccc793de-5a86-488d-b406-1fc1d48e16b9",
                    "expectedControlType": "Button",
                    "processors": "ScaleVector2(x=0.1,y=0.1)",
                    "interactions": ""
                },
                {
                    "name": "SelectItem1",
                    "type": "Button",
                    "id": "e5d75936-e94f-4414-8785-d098b88816d8",
                    "expectedControlType": "Button",
                    "processors": "ScaleVector2(x=0.1,y=0.1)",
                    "interactions": ""
                },
                {
                    "name": "SelectItem2",
                    "type": "Button",
                    "id": "01fb731f-a055-473f-9b5a-862343f5925a",
                    "expectedControlType": "Button",
                    "processors": "ScaleVector2(x=0.1,y=0.1)",
                    "interactions": ""
                },
                {
                    "name": "SelectItem3",
                    "type": "Button",
                    "id": "584ce924-4dc5-4af6-8926-8cdcd0a5b12c",
                    "expectedControlType": "Button",
                    "processors": "ScaleVector2(x=0.1,y=0.1)",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "e3c67f0b-f48e-4767-9e3d-358e788c6868",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "33e7a8ca-ba39-48a4-8951-1ff4487c60da",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "4b8501fb-40b9-415d-af38-3b66ba25ff4b",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "a2139bf6-8586-478e-b87f-eccef5ecb4b4",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "56469c04-bc40-4510-a93f-b0be031ea157",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "b01f7f23-6061-48fc-9d9b-ad71ea18c3d8",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "daa1b7b6-bef4-4c1a-91ef-7aa49a5373b3",
                    "path": "<Keyboard>/leftCtrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeMovementType",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e4426561-4d0d-4dc1-aa90-e05a035daada",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7569164a-5c1a-4ff9-8a65-ca113e1282b9",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2c2022b9-c2a3-48f4-ad2e-ba80d9893c90",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "62b97a6a-3b44-40bf-8d00-734b40de54db",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectItem1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cc9b728b-05aa-40fe-a212-90a68d8d28e8",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectItem2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5fe62b21-767e-4342-a5d8-a162f014f37b",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectItem3",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "e67d10b1-d59e-419d-9d1c-2b8f9249f670",
            "actions": [
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "d4c4dc75-26eb-4505-a234-5e0aecf2b7f7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "51f2897f-20e7-487d-88cb-1a86d4138bd6",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}